# yolov8-api

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  gunicorn_conf.py  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  instrumentation.py  logger.py  main.py  models.py  service.py
app/routers/: predict.py
tests/: test_health.py  test_predict.py
